
#add_subdirectory(Circle)
#add_subdirectory(CircularAnnuluses)
#add_subdirectory(ExperimentAnomalousOutput)
#add_subdirectory(ExperimentAnotherSquare)
#add_subdirectory(ExperimentClippingTriangle)
#add_subdirectory(ExperimentConvex5Polygon)
#add_subdirectory(ExperimentForegroundColor)
#add_subdirectory(ExperimentInterpolateColorsSquare)
#add_subdirectory(ExperimentLines)
#add_subdirectory(ExperimentPoints)
#add_subdirectory(ExperimentRectf)
#add_subdirectory(ExperimentTriangleFan)
#add_subdirectory(ExperimentTriangleStrip)
#add_subdirectory(ExperimentTriangles)
#add_subdirectory(ExperimentTwoSquares)
#add_subdirectory(Helix)
#add_subdirectory(Hemisphere)
#add_subdirectory(MoveSphere)
#add_subdirectory(Parabola)
add_subdirectory(Square)
#add_subdirectory(SquareGLFW)
#add_subdirectory(StrangeK)